--- a/notebook/testing_notebook.ipynb
+++ b/notebook/testing_notebook.ipynb
@@ -952,7 +952,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/sh/gynb2lj96d7922pmjv2kbwjc0000gp/T/ipykernel_1803/3059587900.py:2: FutureWarning: \n",
+      "/var/folders/sh/gynb2lj96d7922pmjv2kbwjc0000gp/T/ipykernel_3211/3059587900.py:2: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -1043,7 +1043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1056,7 +1056,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1068,7 +1068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1078,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1095,7 +1095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1104,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1116,14 +1116,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Training models:  40%|████      | 2/5 [00:00<00:00, 15.41it/s]"
+      "Training models:   0%|          | 0/5 [00:00<?, ?it/s]"
      ]
     },
     {
@@ -1133,14 +1133,14 @@
       "\n",
       "Model: Logistic Regression has an Accuracy of 82.11%\n",
       "\n",
-      "Model: Decision Tree Classifier has an Accuracy of 72.25%\n"
+      "Model: Decision Tree Classifier has an Accuracy of 71.26%\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Training models:  40%|████      | 2/5 [00:00<00:00, 15.41it/s]"
+      "Training models:  60%|██████    | 3/5 [00:00<00:00,  6.22it/s]"
      ]
     },
     {
@@ -1148,7 +1148,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Model: Random Forest has an Accuracy of 79.21%\n"
+      "Model: Random Forest has an Accuracy of 78.85%\n"
      ]
     },
     {
@@ -1157,7 +1157,7 @@
      "text": [
       "/Users/abubakarsaddiq/Desktop/Py_ML_AI/ML_Classification_ete_proj/venv/lib/python3.10/site-packages/sklearn/ensemble/_weight_boosting.py:527: FutureWarning: The SAMME.R algorithm (the default) is deprecated and will be removed in 1.6. Use the SAMME algorithm to circumvent this warning.\n",
       "  warnings.warn(\n",
-      "Training models:  80%|████████  | 4/5 [00:01<00:00,  2.85it/s]"
+      "Training models:  80%|████████  | 4/5 [00:00<00:00,  5.14it/s]"
      ]
     },
     {
@@ -1172,7 +1172,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Training models: 100%|██████████| 5/5 [00:02<00:00,  2.23it/s]"
+      "Training models: 100%|██████████| 5/5 [00:01<00:00,  3.75it/s]"
      ]
     },
     {
